--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,30 @@
 apply plugin: 'com.android.application'
 
+//Read sensitive data from 'sensitive_data.txt' if it exists. Reviewers can add their API key here directly below
+def noKeyFound = '"NO_KEY_FOUND"'
+def theMovieDbApiKey = noKeyFound
+
+def sensitiveDataFile = file('../sensitive_data.txt')
+def Properties sensitiveData = new Properties()
+
+if (sensitiveDataFile.canRead()){
+    sensitiveData.load(new FileInputStream(sensitiveDataFile))
+    if (null!=sensitiveData) {
+        if (sensitiveData.containsKey('theMovieDbApiKey')){
+            theMovieDbApiKey = sensitiveData['theMovieDbApiKey']
+        }
+    }
+}
+
+//TODO: ADD YOUR API HERE!
+if (noKeyFound==theMovieDbApiKey) {
+    theMovieDbApiKey = '"REVIEWERS_THEMOVIEDBAPIKEY_GOES_HERE"'
+}
+
 android {
     compileSdkVersion 27
     defaultConfig {
+        resValue "string", "THEMOVIEDB_API_KEY", theMovieDbApiKey
         applicationId "com.example.phoen.popularmovies"
         minSdkVersion 15
         targetSdkVersion 27
@@ -21,7 +43,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:exifinterface:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
