--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,17 +7,17 @@ def theMovieDbApiKey = noKeyFound
 def sensitiveDataFile = file('../sensitive_data.txt')
 def Properties sensitiveData = new Properties()
 
-if (sensitiveDataFile.canRead()){
+if (sensitiveDataFile.canRead()) {
     sensitiveData.load(new FileInputStream(sensitiveDataFile))
-    if (null!=sensitiveData) {
-        if (sensitiveData.containsKey('theMovieDbApiKey')){
+    if (null != sensitiveData) {
+        if (sensitiveData.containsKey('theMovieDbApiKey')) {
             theMovieDbApiKey = sensitiveData['theMovieDbApiKey']
         }
     }
 }
 
 //TODO: ADD YOUR API HERE!
-if (noKeyFound==theMovieDbApiKey) {
+if (noKeyFound == theMovieDbApiKey) {
     theMovieDbApiKey = '"REVIEWERS_THEMOVIEDBAPIKEY_GOES_HERE"'
 }
 
@@ -46,9 +46,11 @@ dependencies {
     implementation 'com.android.support:exifinterface:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
