Clean up in prep for submission, added readme, organized packages, extracted more strings, fixed bugs re: Internet loss during activity, titles

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ def noKeyFound = '"NO_KEY_FOUND"'
 def theMovieDbApiKey = noKeyFound
 
 def sensitiveDataFile = file('../sensitive_data.txt')
-def Properties sensitiveData = new Properties()
+Properties sensitiveData = new Properties()
 
 if (sensitiveDataFile.canRead()) {
     sensitiveData.load(new FileInputStream(sensitiveDataFile))
